# OpenShadingLanguage

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
src/cmake/: externalpackages.cmake
src/cmake/modules/: FindLLVM.cmake
src/include/OSL/: device_string.h  dual.h  llvm_util.h  oslconfig.h
src/liboslcomp/: ast.cpp  ast.h  oslgram.y
src/liboslexec/: CMakeLists.txt  backendllvm.cpp  backendllvm.h  constfold.cpp  instance.cpp  llvm_gen.cpp  llvm_instance.cpp  llvm_to_cxx.cpp  llvm_util.cpp  opcolor.cpp  opcolor.h  opnoise.cpp  opspline.cpp  osl.cl  oslexec_pvt.h  shadeimage.cpp  shadingsys.cpp  splineimpl.h
src/python/: CMakeLists.txt  py_osl.cpp
src/testoptix/: CMakeLists.txt  optixrend.cpp  optixrend.h  raytracer.h  stringtable.cpp  testoptix.cpp  testoptix_rast.cpp  testoptix_render.a.cpp  testoptix_render2.cpp
src/testoptix/cuda/: rend_lib.cu  rend_lib.h  renderer.cu  tex_renderer.cu
src/testrender/: optixraytracer.cpp
src/testrender/cuda/: rend_lib.cu
src/testshade/: optixgridrender.cpp
testsuite/: runtest.py
testsuite/oslc-err-swizzle/: test.osl
testsuite/oslc-err-swizzle/ref/: out.txt
testsuite/swizzle/: swizzle.osl
testsuite/testoptix/: matte.osl  run.py  scene.xml  test_texture.osl  texlookup.osl  texlookup.xml
testsuite/testoptix-noise/ref/: out.exr
testsuite/testoptix/ref/: test_spline.exr  test_texture.exr
testsuite/texture-wrap/: run.py
